Fix payload links in REST api page, spacing, and style on data model page

--- a/assets/themes/twitter-2.0/css/style.css
+++ b/assets/themes/twitter-2.0/css/style.css
@@ -29,7 +29,7 @@ pre { white-space: pre !important; }
 /* code can be in sentences and not be bright red and in an box!! */
 code, pre {
   font-family: Consolas, "Andale Mono", "Bitstream Vera Sans Mono", "DejaVu Sans Mono", Inconsolata, "Lucida Console", Monaco, "courier new", courier;
-  padding: none !important;
+  padding: 0 0 0 0 !important;
   color: #666;
   font-size: 96% !important;
   border: none;
